--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
-        "alpinejs": "^3.4.2",
+        "alpinejs": "^3.12.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.6",
+        "rollup-plugin-postcss": "^4.0.2",
         "tailwindcss": "^3.1.0",
         "vite": "^4.3.9"
     }
