--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Hq10/OgemuV6CdctPTNxlzWjlVhNIfEXR2AmPD3HgPA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=bloggg
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -29,13 +29,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=localhost
+MAIL_PORT=25
+MAIL_USERNAME=example@mail.ru
+MAIL_PASSWORD=Manaz20042001
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS="example@mail.ru"
+MAIL_FROM_NAME="Veronia"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
